--- a/index.html
+++ b/index.html
@@ -2,24 +2,41 @@
 <html lang="en">
 
 <head>
-    <title>PPL Workout Routine</title>
+    <title>PPL Workout Split</title>
   <meta charset="UTF-8"/>
   <meta name="description" content="A great Push Pull Legs Workout Routine"/>
   <meta name="author" content="Joel Warwick"/>
   <meta name="viewport" content="width=device-width, initial-scale1, shrink-to-fit=no"/>
+  <link rel="stylesheet" href="assets/css/style.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Onest&family=Passion+One&family=Paytone+One&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
 <main>
-<header class="primary">
-    <h1>Joel's Push Pull Legs Workout Routine</h1>
+
+<header class="primary">    
+<nav class="primary">
+  <ul>
+    <li class="logo"><a href="">JWFitness</a></li>
+    <li><a href="">Home</a></li>
+    <li><a href="">How to's</a></li>
+    <li><a href="">About</a></li>
+  </ul>
+</nav>
+
+<h1>Joel's Push Pull Legs Workout Split <span class="diff">for Building Muscle</span></h1>
 </header>
+
+<div class="content">
 <section id="day-1">
 <header class="push-day-1">
     <h2>Day 1: Push Day</h2>
 </header>
 <header class="muscle-groups">
-    <h3>Targeted Muscle Groups</h3>
+    <h3>Targeted Muscle Groups:</h3>
     <ul>
         <li>Chest</li>
         <li>Shoulders</li>
@@ -29,7 +46,7 @@
 <header class="workouts">
     <h3>Workouts</h3>
 </header>
-<ul>
+<ul class="workouts">
     <li><a href="how-to/index.html#flat-db-press">Flat Dumbbell Press</a></li>
     <li><a href="how-to/index.html#incline-db-press">Incline Dumbbell Press</a></li>
     <li><a href="how-to/index.html#high-to-low-cable-fly">High to Low Cable Fly</a></li>
@@ -47,7 +64,7 @@
     <h2>Day 2: Pull Day</h2>
 </header>
 <header class="muscle-groups">
-    <h3>Targeted Muscle Groups</h3>
+    <h3>Targeted Muscle Groups:</h3>
     <ul>
         <li>Back</li>
         <li>Biceps</li>
@@ -56,7 +73,7 @@
 <header class="workouts">
     <h3>Workouts</h3>
 </header>
-<ul>
+<ul class="workouts">
     <li><a href="how-to/index.html#deadlift">Deadlift</a></li>
     <li><a href="how-to/index.html#lat-pulldown">Lat Pulldown</a></li>
     <li><a href="how-to/index.html#bb-row">Barbell Row</a></li>
@@ -73,7 +90,7 @@
     <h2>Day 3: Leg Day</h2>
 </header>
 <header class="muscle-groups">
-    <h3>Targeted Muscle Groups</h3>
+    <h3>Targeted Muscle Groups:</h3>
     <ul>
         <li>Quads</li>
         <li>Hamstrings</li>
@@ -83,7 +100,7 @@
 <header class="workouts">
     <h3>Workouts</h3>
 </header>
-<ul>
+<ul class="workouts">
     <li><a href="how-to/index.html#leg-extension">Leg Extensions</a></li>
     <li><a href="how-to/index.html#leg-press">Leg Press</a></li>
     <li><a href="how-to/index.html#bulgarian-lunge">Bulgarin Lunges</a></li>
@@ -94,10 +111,10 @@
 
 <section id="day-4">
     <header class="push-day-2">
-        <h2>Day 4: Push Day</h2>
+        <h2>Day 4: Push Day 2</h2>
     </header>
     <header class="muscle-groups">
-        <h3>Targeted Muscle Groups</h3>
+        <h3>Targeted Muscle Groups:</h3>
         <ul>
             <li>Chest</li>
             <li>Shoulders</li>
@@ -107,7 +124,7 @@
     <header class="workouts">
         <h3>Workouts</h3>
     </header>
-    <ul>
+    <ul class="workouts">
         <li><a href="">Bench Press</li>
         <li><a href="">Incline Dumbbell Press</li>
         <li><a href="">Dips</li>
@@ -121,10 +138,10 @@
 
 <section id="day-5">
     <header class="pull-day-2">
-        <h2>Day 2: Pull Day</h2>
+        <h2>Day 5: Pull Day 2</h2>
     </header>
     <header class="muscle-groups">
-        <h3>Targeted Muscle Groups</h3>
+        <h3>Targeted Muscle Groups:</h3>
         <ul>
             <li>Back</li>
             <li>Biceps</li>
@@ -133,7 +150,7 @@
     <header class="workouts">
         <h3>Workouts</h3>
     </header>
-    <ul>
+    <ul class="workouts">
         <li><a href="">Pullups</li>
         <li><a href="">Lat Pulldown</li>
         <li><a href="">Cable Seated Row</li>
@@ -148,10 +165,10 @@
 
 <section id="day-6">
     <header class="leg-day-2">
-        <h2>Day 6: Leg Day</h2>
+        <h2>Day 6: Leg Day 2</h2>
     </header>
     <header class="muscle-groups">
-        <h3>Targeted Muscle Groups</h3>
+        <h3>Targeted Muscle Groups:</h3>
         <ul>
             <li>Quads</li>
             <li>Hamstrings</li>
@@ -161,14 +178,14 @@
     <header class="workouts">
         <h3>Workouts</h3>
     </header>
-    <ul>
+    <ul class="workouts">
         <li><a href="">Squat</li>
         <li><a href="">Leg Press</li>
         <li><a href="">Leg Extensions</li>
         <li><a href="">Seated Leg Curls</li>
     </ul>
 </section>
-
+</div>
 
 
 </main>
